--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tournoi-asynconf-2023",
+  "name": "asynconf-tournoi-2023",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -9,8 +9,7 @@
     "test:unit": "vitest"
   },
   "dependencies": {
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue": "^3.3.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
